# Tauri-PDF-Reader

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
.specify/memory/: constitution.md
docs/: ARCHITECTURE.md
docs/ui/: DESIGN_SYSTEM.md  FLOWS.md  QUALITY_GATES.md  README.md  UI_BACKLOG.md  UI_BASELINE.md  UI_RESEARCH.md  UX_AUDIT.md
e2e/: critical-loop.spec.ts
scripts/: verify.sh
specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tauri-pdf-tts-reader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-hexagonal-arch-tdd/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ui-ux-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-pdf-render-quality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-stabilization-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-reading-session-audio-cache/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-ui-ux-overhaul/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  ui-spec.md  ui-tasks-seed.md
specs/checklists/: requirements.md
specs/contracts/: highlights.contract.md  library.contract.md  tts.contract.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: audio_cache.rs  mod.rs
src-tauri/src/adapters/sqlite/: audio_cache_repo.rs  mod.rs  session_repo.rs  settings_repo.rs
src-tauri/src/ai_tts/: elevenlabs.rs  mod.rs  player.rs
src-tauri/src/application/: audio_cache_service.rs  audio_export_service.rs  highlight_service.rs  library_service.rs  mod.rs  session_service.rs  settings_service.rs  tts_service.rs
src-tauri/src/commands/: ai_tts.rs  audio_cache.rs  audio_export.rs  highlights.rs  library.rs  mod.rs  settings.rs  tts.rs
src-tauri/src/commands/highlights/: db.rs  export.rs  mod.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/domain/: error.rs  errors.rs  mod.rs
src-tauri/src/domain/cache/: cache_entry.rs  coverage.rs  mod.rs
src-tauri/src/domain/document/: mod.rs
src-tauri/src/domain/export/: export_result.rs  mod.rs
src-tauri/src/domain/highlight/: mod.rs
src-tauri/src/domain/sessions/: mod.rs  session.rs
src-tauri/src/domain/settings/: mod.rs
src-tauri/src/domain/tts/: mod.rs  text_chunking.rs
src-tauri/src/ports/: audio_cache_repository.rs  audio_export_service.rs  document_repository.rs  highlight_repository.rs  mod.rs  session_repository.rs  settings_repository.rs  tts_engine.rs
src-tauri/src/services/: logging.rs
src-tauri/src/tauri_api/: mod.rs  sessions.rs  settings.rs
src-tauri/src/tts/: chunking.rs  engine.rs  mod.rs  types.rs
src-tauri/tests/: audio_cache_contract.rs  audio_export_contract.rs  session_contract.rs  settings_contract.rs
src/adapters/: create-repositories.ts
src/components/: PageNavigation.css  PageNavigation.tsx  PdfViewer.css  PdfViewer.tsx  TextLayer.css  TextLayer.tsx  Toolbar.css  Toolbar.tsx  ZoomControls.css  ZoomControls.tsx
src/domain/: errors.ts
src/hooks/: useAiTts.ts  useAnnounce.tsx  useAudioCache.ts  useAutoSave.ts  useExportProgress.ts  useFileDialog.ts  useFocusTrap.ts  useFollowAlong.ts  useHighlightPersistence.ts  useHwAccelStatus.ts  useKeyboardShortcuts.ts  usePageCache.ts  useRenderSettings.ts  useRovingTabindex.ts  useTextSelection.ts  useTheme.ts  useTtsEvents.ts  useTtsPrebuffer.ts  useTtsWordHighlight.ts
src/lib/: bindings.ts  constants.ts  coordinate-transform.ts  db-init.ts  pdf.ts  schemas.ts  tauri-invoke.ts  text-chunking.ts  tts-tracking.ts
src/ports/: audio-cache-repository.ts  (+6 more)
tests/: setup.ts
(+202 files in other folders)
