[package]
name = "tauri-pdf-reader"
version = "0.1.0"
description = "A PDF reader with highlighting and text-to-speech"
authors = ["VoxPage"]
edition = "2021"

[lib]
name = "tauri_pdf_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tts = { version = "0.26", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
async-trait = "0.1"
thiserror = "1.0"

# Testing mocks (optional for integration tests)
mockall = { version = "0.13", optional = true }

# Type generation for frontend
specta = { version = "2.0.0-rc.20", features = ["chrono", "uuid"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }

# AI TTS (ElevenLabs) and audio export
rodio = { version = "0.20", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "native-tls-vendored"], optional = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
dirs = "6.0.0"

# Audio export with chapter markers
id3 = "1.14"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["custom-protocol", "elevenlabs-tts"]
custom-protocol = ["tauri/custom-protocol"]
native-tts = ["tts"]
elevenlabs-tts = ["rodio", "reqwest", "tokio", "futures", "bytes", "base64"]
# Enable mocks for integration tests
test-mocks = ["mockall"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
